@@ -1,3 +1,6 @@
+
+- Fixed bug #8428: LIMIT doesn't work correctly, inverted values.
+
 1.1rc1 - Monday 29 May 2006
 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
 
